Finally fix modal shadow banding and iOS scrollbar glitches

--- a/src/app.css
+++ b/src/app.css
@@ -18,7 +18,8 @@
   /* Modal */
   --overlay-background: #ffffffbb;
   --modal-border: #dadada;
-  --modal-header-shadow: #00000033;
+  --modal-shadow: 0 5px 15px #00000020;
+  --modal-header-shadow: 0 5px 5px #00000033;
   --correct-bg-soft: #50bf50;
   /* Segmented Control */
   --segmented-background: #ebebeb;
@@ -46,9 +47,10 @@
   /* Make sure to also change settings.ts */
   --page-background: #121212;
   /* Modal */
-  --overlay-background: #121212cf;
+  --overlay-background: #121212de;
   --modal-border: #212121;
-  --modal-header-shadow: #00000087;
+  --modal-shadow: 0 5px 6px #00000050;
+  --modal-header-shadow: 0 5px 5px #00000087;
   --correct-bg-soft: #4dbf4d;
   /* Segmented Control */
   --segmented-background: #303030;
